# KuiklyUI

./: 1.6.21_test_publish.sh  1.7.20_test_publish.sh  1.8.21_test_publish.sh  OpenKuiklyIOSRender.podspec  build.1.9.22.gradle.kts  build.2.0.21.gradle.kts  build.2.0.ohos.gradle.kts  build.2.1.21.gradle.kts  gradle.properties  log.md
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/java/com/tencent/kuikly/android/demo/: KuiklyPageView.kt  KuiklyRenderActivity.kt
compose/: build.1.9.22.gradle.kts  build.2.0.ohos.gradle.kts  build.2.1.21.gradle.kts
compose/src/commonMain/kotlin/com/tencent/kuikly/compose/: ComposeContainer.kt
compose/src/commonMain/kotlin/com/tencent/kuikly/compose/foundation/: Background.kt  Border.kt
compose/src/commonMain/kotlin/com/tencent/kuikly/compose/material3/: ModalBottomSheet.kt
compose/src/commonMain/kotlin/com/tencent/kuikly/compose/platform/: GlobalTapManager.kt
compose/src/commonMain/kotlin/com/tencent/kuikly/compose/ui/: GlobalSnapshotManager.kt  KuiklyCanvas.kt  KuiklyPath.kt
compose/src/commonMain/kotlin/com/tencent/kuikly/lifecycle/: DefaultLifecycleObserver.kt  DefaultLifecycleObserverAdapter.kt  Lifecycle.kt  LifecycleEventObserver.kt  LifecycleObserver.kt  LifecycleOwner.kt  LifecycleRegistry.kt  Lifecycling.kt  ViewModel.kt  ViewModelProvider.kt  ViewModelStore.kt  ViewModelStoreOwner.kt
compose/src/commonMain/kotlin/com/tencent/kuikly/lifecycle/compose/: LocalLifecycleOwner.kt
compose/src/commonMain/kotlin/com/tencent/kuikly/lifecycle/viewmodel/: CreationExtras.kt  InitializerViewModelFactory.kt
core/: build.1.6.21.gradle.kts  build.1.7.20.gradle.kts  build.1.8.21.gradle.kts  build.1.9.22.gradle.kts  build.2.0.21.gradle.kts  build.2.0.ohos.gradle.kts
core-annotations/: build.2.0.ohos.gradle.kts
core-render-ios/Extension/: KuiklyRenderViewControllerBaseDelegator.h  KuiklyRenderViewControllerBaseDelegator.m
core-render-ios/Extension/AdvancedComps/: KRPAGView.h  KRPAGView.m
core-render-ios/Extension/Category/: UIView+CSS.m
core-render-ios/Extension/Components/: KRScrollView.m  KRTextAreaView.m  KRTextFieldView.m
core-render-ios/Extension/Modules/: KRBackPressModule.h  KRBackPressModule.m
core-render-ios/Performance/: KRMemoryMonitor.m  KRPerformanceDataProtocol.h  KRPerformanceManager+LifeCircle.m  KRPerformanceManager.h  KRPerformanceManager.mm  KRPerformanceModule.m
core-render-ios/Protocol/: KuiklyRenderContextProtocol.h
core-render-ios/Thread/: KuiklyRenderThreadBridge.h  KuiklyRenderThreadBridge.m
core-render-ios/View/: KuiklyRenderView.m
core-render-ohos/: .gitignore  CHANGELOG.md  oh-package-lock.json5  oh-package.json5
core-render-ohos/src/main/cpp/: CMakeLists.txt
core-render-ohos/src/main/cpp/libohos_render/api/src/: Kuikly.cpp
core-render-ohos/src/main/cpp/libohos_render/context/: KRRenderContextParams.h
core-render-ohos/src/main/cpp/libohos_render/expand/components/base/: KRBasePropsHandler.cpp  KRBasePropsHandler.h
core-render-ohos/src/main/cpp/libohos_render/expand/components/canvas/: KRCanvasView.cpp
core-render-ohos/src/main/cpp/libohos_render/expand/components/forward/: KRForwardArkTSView.cpp
core-render-ohos/src/main/cpp/libohos_render/expand/components/input/: KRTextAreaView.cpp  KRTextAreaView.h  KRTextFieldView.cpp
core-render-ohos/src/main/cpp/libohos_render/expand/components/richtext/: KRParagraph.cpp  KRRichTextShadow.cpp
core-render-ohos/src/main/cpp/libohos_render/expand/components/scroller/: KRScrollerView.cpp
core-render-ohos/src/main/cpp/libohos_render/expand/events/: KRBaseEventHandler.cpp
core-render-ohos/src/main/cpp/libohos_render/expand/events/gesture/: KRGestureEventHandler.cpp
core-render-ohos/src/main/cpp/libohos_render/foundation/: KRConfig.h
core-render-ohos/src/main/cpp/libohos_render/foundation/type/: KRRenderValue.h
core-render-ohos/src/main/cpp/libohos_render/manager/: KRArkTSManager.cpp  KRKeyboardManager.cpp  KRKeyboardManager.h
core-render-ohos/src/main/cpp/libohos_render/utils/: KRConvertUtil.cpp  KRConvertUtil.h  KRTransformParser.cpp  KRViewUtil.cpp  KRViewUtil.h
core-render-ohos/src/main/ets/: KRNativeRender.ets  KRNativeRenderController.ets
core-render-ohos/src/main/ets/foundation/: KRWindowInfo.ets
core-render-ohos/src/main/ets/manager/: KRNativeManager.ets
core/src/androidMain/kotlin/com/tencent/kuikly/core/utils/: VerifyUtil.android.kt
core/src/commonMain/kotlin/com/tencent/kuikly/core/base/: AbstractBaseView.kt  Attr.kt  ClipPathHandler.kt  Props.kt
core/src/commonMain/kotlin/com/tencent/kuikly/core/directives/: LazyLoopDirectivesView.kt
core/src/commonMain/kotlin/com/tencent/kuikly/core/global/: GlobalFunctions.kt
core/src/commonMain/kotlin/com/tencent/kuikly/core/layout/: FlexNode.kt
core/src/commonMain/kotlin/com/tencent/kuikly/core/pager/: IPager.kt  Pager.kt
core/src/commonMain/kotlin/com/tencent/kuikly/core/reactive/: ReactiveObserver.kt
core/src/commonMain/kotlin/com/tencent/kuikly/core/utils/: VerifyUtil.kt
core/src/commonMain/kotlin/com/tencent/kuikly/core/views/: CanvasView.kt  InputView.kt  PAGView.kt  TabsView.kt  (+3 more)
core/src/iosMain/iosInterop/cinterop/: ios.def
demo/: build.2.0.ohos.gradle.kts
docs/API/components/: input.md  pag.md  text-area.md
docs/ChangeLog/: changelog.md
docs/DevGuide/: ohos-kn-stack-symbolication.md
h5App/src/jsMain/kotlin/: KuiklyWebRenderViewDelegator.kt  Main.kt
h5App/src/jsMain/kotlin/manager/: KuiklyRouter.kt
h5App/src/jsMain/kotlin/module/: KRRouterModule.kt
h5App/src/jsMain/kotlin/processor/: CustomImageProcessor.kt
h5App/src/jsMain/resources/: index.html
iosApp/iosApp/KuiklyRenderExpand/Controller/: KuiklyRenderViewController.m
ohosApp/: build-profile.json5  oh-package-lock.json5
ohosApp/entry/: oh-package-lock.json5
ohosApp/entry/src/main/: module.json5
ohosApp/entry/src/main/ets/kuikly/: KuiklyViewDelegate.ets
ohosApp/entry/src/main/ets/kuikly/adapters/: AppKRPAGAdapter.ets
ohosApp/entry/src/main/ets/kuikly/components/: KuiklyPageView.ets
ohosApp/entry/src/main/ets/kuikly/modules/: KRBackgroundTimerModule.ets
(+107 files in other folders)
